<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_locations">Locations</string>
    <string name="location_text">City, Country</string>
    <string name="date_text">Day DD-MM-YYYY</string>
    <string name="current_temp_text">Tm</string>
    <string name="content_desc_icon_current">Current weather icon</string>
    <string name="max_min_temp_text">MaxTm/MinTm</string>
    <string name="weather_desc_text">Description</string>
    <string name="wind_speed_text">Wind speed</string>
    <string name="content_desc_icon_wind">Wind direction icon</string>
    <string name="pressure_text">Pressure</string>
    <string name="forecast_date_day_1">Day</string>
    <string name="content_desc_forecast_icon_day_1">Forecast weather icon day 1</string>
    <string name="forecast_temp_day_1">Temp</string>
    <string name="forecast_date_day_2">Day</string>
    <string name="content_desc_forecast_icon_day_2">Forecast weather icon day 2</string>
    <string name="forecast_temp_day_2">Temp</string>
    <string name="forecast_date_day_3">Day</string>
    <string name="content_desc_forecast_icon_day_3">Forecast weather icon day 3</string>
    <string name="forecast_temp_day_3">Temp</string>
    <string name="forecast_date_day_4">Day</string>
    <string name="content_desc_forecast_icon_day_4">Forecast weather icon day 4</string>
    <string name="forecast_temp_day_4">Temp</string>
    <string name="forecast_date_day_5">Day</string>
    <string name="content_desc_forecast_icon_day_5">Forecast weather icon day 5</string>
    <string name="forecast_temp_day_5">Temp</string>
    <string name="forecast_date_day_6">Day</string>
    <string name="content_desc_forecast_icon_day_6">Forecast weather icon day 6</string>
    <string name="forecast_temp_day_6">Temp</string>
    <string name="city_search_text">Search for weather in city</string>
    <string name="city_enter_edit_text">Enter name</string>
    <string name="search_button_text">Search</string>
    <string name="result_text">Results</string>
    <string name="OWM_text">www.openweathermaps.org</string>
</resources>
